本の一覧ページまで作った

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,6 @@
-<h1>Topページ</h1>
+<h1>Welcome to Bookers!!</h1>
+<p>in Bookers,</p></br>
+<p>you can share and exchange your opinions, inpressions,</br>
+and emotions</br>
+about various books!
+</p>
