--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,39 @@
-<h1>本の一覧</h1>
+<h1>User info</h1>
+<table>
+  <% @users.each do |user| %><!--間違ってる可能性が高い-->
+   <%= image_tag user.get_profile_image(100, 100) %>
+   <tr><th>name</th><td><%= user.name %></td></tr>
+   <tr><th>introduction</th><td><%= user.introduction %></td></tr>
+  <% end %>
+</table>
+
+ <%= link_to "edit" %>
+
+<h1>New book</h1>
+<%= form_with model: @book do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+  <h4>Opinion</h4>
+  <%= f.text_area :body %>
+  <%= f.submit 'Create Book' %>
+<% end %>
+
+<h1>Books</h1>
+ <table>
+   <thead>
+     <tr>
+       <th></th>
+       <th>Title</th>
+       <th>Opinion</th>
+     </tr>
+   </thead>
+  <% @books.each do |book| %>
+   <tbody>
+     <tr>
+       <td><%= image_tag 'no_image.jpg' %></td>
+       <td><%= book.title %></td>
+       <td><%= book.body %></td>
+     </tr>
+   </tbody>
+  <% end %>
+ </table>
