--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,39 @@
   </head>
 
   <body>
+    <header>
+      <h1>Bookers</h1>
+      <% if user_signed_in? %>
+       <li>
+         <%= link_to "Home", root_path %>
+       </li>
+       <li>
+         <%= link_to "Users" %>
+       </li>
+       <li>
+         <%= link_to "Books" %>
+       </li>
+       <li>
+         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+       </li>
+      <% else %>
+       <li>
+         <%= link_to "Home" %>
+       </li>
+       <li>
+         <%= link_to "About", about_path %>
+       </li>
+       <li>
+         <%= link_to "Sign up", new_user_registration_path %>
+       </li>
+       <li>
+         <%= link_to "Log in", new_user_session_path %>
+       </li>
+      <% end %>
+    </header>
     <%= yield %>
+    <footer>
+      CopyRight Infratop.inc
+    </footer>
   </body>
 </html>
