--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,24 @@
-<h1>ユーザーの詳細</h1>
+<%= render 'template/user', user: @user %>
+
+ <%= link_to "edit" %>
+
+<%= render 'template/book', book: @book %>
+
+<h1>Books</h1>
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td></td><!--リンクでuserのshowページ-->
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
