--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,8 @@
-<h1>User info</h1>
-<table>
-  <% @users.each do |user| %><!--間違ってる可能性が高い-->
-   <%= image_tag user.get_profile_image(100, 100) %>
-   <tr><th>name</th><td><%= user.name %></td></tr>
-   <tr><th>introduction</th><td><%= user.introduction %></td></tr>
-  <% end %>
-</table>
+<%= render 'template/user', user: @user %>
 
  <%= link_to "edit" %>
 
-<h1>New book</h1>
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
-<% end %>
+<%= render 'template/book', book: @book %>
 
 <h1>Books</h1>
  <table>
@@ -30,8 +16,8 @@
   <% @books.each do |book| %>
    <tbody>
      <tr>
-       <td><%= image_tag 'no_image.jpg' %></td>
-       <td><%= book.title %></td>
+       <td><%= image_tag 'no_image.jpg' %></td><!--画像クリックしてuserのshowページに飛ぶ-->
+       <td><%= link_to book.title, book_path(book.id) %></td>
        <td><%= book.body %></td>
      </tr>
    </tbody>
