--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
          <%= link_to "Home", root_path %>
        </li>
        <li>
-         <%= link_to "Users" %>
+         <%= link_to "Users", users_path %>
        </li>
        <li>
-         <%= link_to "Books" %>
+         <%= link_to "Books", books_path %>
        </li>
        <li>
          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
