--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://kit.fontawesome.com/04f10c2a51.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <!--link_tagはapp/assets配下のファイルを参照-->
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--pack_tagはapp/javaScript配下のファイルを参照-->
   </head>
 
   <body>
