--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,36 +13,61 @@
     <!--pack_tagはapp/javaScript配下のファイルを参照-->
   </head>
 
-  <body>
-    <header>
-      <h1>Bookers</h1>
-      <% if user_signed_in? %>
-       <li>
-         <%= link_to "Home", root_path %>
-       </li>
-       <li>
-         <%= link_to "Users", users_path %>
-       </li>
-       <li>
-         <%= link_to "Books", books_path %>
-       </li>
-       <li>
-         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-       </li>
-      <% else %>
-       <li>
-         <%= link_to "Home" %>
-       </li>
-       <li>
-         <%= link_to "About", about_path %>
-       </li>
-       <li>
-         <%= link_to "Sign up", new_user_registration_path %>
-       </li>
-       <li>
-         <%= link_to "Log in", new_user_session_path %>
-       </li>
-      <% end %>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark"><!--headerのロゴを横並びにする-->
+      <!--navbar ナビゲーションバーの表示
+          navbar-expand-[画面幅] 指定した画面幅に応じてナビゲーションバー、ナビゲーションアイコンを切り替えて表示
+          navbar-[カラースキーム] ナビゲーションアイコンの配色を指定する-->
+       <div class="container">
+         <a class="navbar-brand p-3" href="/"><h1>Bookers</h1></a>
+         <!--navbar-brand ロゴに使用されるnavbarのサポートclass-->
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+           <!--navbar-toggler ナビゲーションアイコンの枠部分
+               navbar-toggler-icon ナビゲーションアイコンの三本線部分-->
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+           <ul class="navbar-nav ml-auto">
+               <!--・ナビゲーションアイコンを開く前に隠しておきたいメニューは[collapse]
+               classが付与された要素の中に入れておく
+               ・[collapse]classを付与している要素に任意のidを付与する
+               ・付与したidは「navabar-toggler」classが付与される要素のdata-targetに指定する
+               頭にセレクタ#をつける
+               ・「navbar-toggler」classが付与される要素にdata-toggle="collapse"、data-target="#[id名]"、aria-controls="[id名]"、
+               aria-expanded="false"、aria-label="Toggle navigation"-->
+              <% if user_signed_in? %>
+               <li class="nav-item p-3">
+                 <%= link_to "Home", root_path %>
+               </li>
+               <li class="nav-item p-3">
+                 <%= link_to "Users", users_path %>
+               </li>
+               <li class="nav-item p-3">
+                 <%= link_to "Books", books_path %>
+               </li>
+               <li class="nav-item p-3">
+                 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+               </li>
+              <% else %>
+               <li class="nav-item p-3">
+                 <%= link_to "Home" %>
+               </li>
+               <li class="nav-item p-3">
+                 <%= link_to "About", about_path %>
+               </li>
+               <li class="nav-item p-3">
+                 <%= link_to "Sign up", new_user_registration_path %>
+               </li>
+               <li class="nav-item p-3">
+                 <%= link_to "Log in", new_user_session_path %>
+               </li>
+             <% end %>
+           </ul>
+         </div>
+       </div>
+      </nav>
     </header>
     <%= yield %>
     <footer>
