--- a/app/views/template/_book.html.erb
+++ b/app/views/template/_book.html.erb
@@ -3,6 +3,6 @@
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Opinion</h4>
-  <%= f.text_area :body %>
+  <%= f.text_area :body %></br>
   <%= f.submit 'Create Book' %>
 <% end %>
