--- a/app/views/template/_user.html.erb
+++ b/app/views/template/_user.html.erb
@@ -1,6 +1,6 @@
 <h1>User info</h1>
 <table>
-   <tr><%= image_tag user.get_profile_image(100, 100) %></tr>
+   <tr><%= image_tag user.get_profile_image(100,100)%></tr><!--book側でのリサイズができない-->
    <tr><th>name</th><td><%= user.name %></td></tr>
    <tr><th>introduction</th><td><%= user.introduction %></td></tr>
 </table>
