ゲストログイン完成

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,3 +4,6 @@
 and emotions</br>
 about various books!
 </p>
+<div class="text-center btn-lg"><%= link_to "ゲストログイン", users_guest_sign_in_path, class: "btn btn-warning", method: :post %></div>
+<div class="pt-3 text-center btn-lg"><%= link_to "Log in", new_user_session_path, class: "btn btn-info" %></div>
+<div class="pt-3 text-center btn-lg"><%= link_to "Sign up", new_user_registration_path, class: "btn btn-success" %></div>
