--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,16 +60,24 @@
                </li>
               <% else %>
                <li class="nav-item p-3">
-                 <%= link_to "Home" %>
+                 <%= link_to root_path do %>
+                  <i class="fa-solid fa-house"></i>Home
+                 <% end %>
                </li>
                <li class="nav-item p-3">
-                 <%= link_to "About", about_path %>
+                 <%= link_to about_path do %>
+                  <i class="fa-solid fa-link"></i>About
+                 <% end %>
                </li>
                <li class="nav-item p-3">
-                 <%= link_to "Sign up", new_user_registration_path %>
+                 <%= link_to new_user_registration_path do %>
+                  <i class="fa-solid fa-user-plus"></i>Sign up
+                 <% end %>
                </li>
                <li class="nav-item p-3">
-                 <%= link_to "Log in", new_user_session_path %>
+                 <%= link_to new_user_session_path do %>
+                  <i class="fa-solid fa-right-to-bracket"></i>Log in
+                 <% end %>
                </li>
              <% end %>
            </ul>
@@ -78,7 +86,7 @@
       </nav>
     </header>
     <%= yield %>
-    <footer>
+    <footer class="text-center">
       CopyRight Infratop.inc
     </footer>
   </body>
