--- a/app/views/template/_book.html.erb
+++ b/app/views/template/_book.html.erb
@@ -4,5 +4,5 @@
   <%= f.text_field :title %>
   <h4>Opinion</h4>
   <%= f.text_area :body %></br>
-  <%= f.submit 'Create Book' %>
+  <%= f.submit 'Create Book', class: "btn btn-success"%>
 <% end %>
