--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
            <tr>
              <td><%= image_tag user.get_profile_image(100, 100) %></td>
              <td><%= user.name %></td>
-             <td><%= link_to "show" %></td>
+             <td><%= link_to "show", user_path(user.id) %></td>
            </tr>
          </tbody>
         <% end %>
