--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
     <tr>
       <td></td><!--リンクでuserのshowページ-->
       <td><%= book.title %></td>
-      <td><%= book.opinion %></td>
+      <td><%= book.body %></td>
     </tr>
     <% end %>
   </tbody>
