退会機能追加

--- a/app/views/users/check.html.erb
+++ b/app/views/users/check.html.erb
@@ -5,5 +5,5 @@
   退会する場合は、「退会する」をクリックしてください。
 </p>
 
-<%= link_to "退会しない", user_path(user.id), :class => "btn btn-primary ms-3" %>
-<%= link_to "退会する", users_withdraw_path, method: :patch, :class => "btn btn-danger ms-3", data: { confirm: "本当に退会しますか？" } %>
+<%= link_to "退会しない", user_path(current_user.id), :class => "btn btn-primary ms-3" %>
+<%= link_to "退会する", user_withdraw_path, method: :patch, :class => "btn btn-danger ms-3", data: { confirm: "本当に退会しますか？" } %>
