--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,30 @@
-<h1>User info</h1>
+<div class="container">
+ <div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto pt-2">
+   <h1>User info</h1>
+   <%= form_with model: @user do |f| %>
+    <div class="form-group">
+     <label for="inputName">Name</label>
+     <%= f.text_field :name, autofocus: true, id: "inputName", placeholder:"Name" %>
+    </div>
+
+    <div class="form-group">
+     <label for="inputImage">Image</label>
+     <%= f.file_field :profile_image, placeholder: "Image", accept: "image/*" %>
+    </div>
+
+    <div class="form-group">
+     <label for="inputIntroduction"></label>
+     <%= f.text_area :introduction, placeholder: "Introduction" %>
+    </div>
+
+    <div class="form-group">
+     <%= f.submit "Update User" %>
+    </div>
+   <% end %>
+   <div class="form-group">
+     <%= link_to "退会", user_check_path, class: "btn btn-danger" %>
+    </div>
+  </div>
+ </div>
+</div>
