--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,10 @@
          <tbody>
            <tr>
              <td><%= image_tag user.get_profile_image(100, 100) %></td>
-             <td><%= user.name %></td>
+             <td><= user.name %></td>
+             <td>フォロー数: <%= user.followings.count %></td>
+             <td>フォロワー数: <%= user.followers.count %></td>
+             <td><%= render "relationships/btn", user: user,  options: { class: "follow-link" } %></td>
              <td><%= link_to "show", user_path(user.id) %></td>
            </tr>
          </tbody>
