エラー解決

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,8 +9,8 @@
       <%= link_to @books.user.name %></td><!--名前表示できてない-->
       <td><%= link_to @books.title %></td><!-- , book_path(@books.id)入るかも-->
       <td><%= @books.body %></td>
-      <td id="favorite_btn_<%= @book.id %>">
-        <%= render "favorites/btn", book: @book %>
+      <td id="favorite_btn_<%= @books.id %>">
+        <%= render "favorites/btn", book: @books %>
       </td>
       <% if @books.user == current_user %>
         <td><%= link_to "Edit", edit_book_path(@books.id) %></td>
