--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,18 @@
       <td><%= book.body %></td>
     </tr>
     <% end %>
+    <% unless @user.id == current_user.id %>
+     <% if(current_user.following? @user) && (@user.following? current_user) %>
+     <% if @isRoom == true %>
+      <p class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-primary btn-lg">チャットへ</a></p>
+     <% else %>
+      <%= form_for @room do |f| %>
+       <%= e.hidden_field :user_id, value: @user.id %>
+      <% end %>
+      <%= f.submit "チャットを始める", class:"btn btn-primary btn-lg user-show-chat" %>
+     <% end %>
+    <% end %>
+    <% end %>
+   <% end %>
   </tbody>
 </table>
