--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,20 @@
 <%= render 'template/book', book: @book %>
 
 <h1>Books</h1>
+<% unless @user.id == current_user.id %>
+  <% if(current_user.following? @user) && (@user.following? current_user) %>
+    <% if @isRoom == true %>
+      <p class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-primary btn-lg">チャットへ</a>
+      <% else %>
+        <%= form_for @room do |f| %>
+         <%= fields_for @entry do |e| %>
+          <%= e.hidden_field :user_id, value: @user.id %>
+         <% end %>
+        <%= f.submit "チャットを始める", class:"btn btn-primary btn-lg user-show-chat" %>
+        <% end %>
+    <% end %>
+  <% end %>
+<% end %>
 <table>
   <thead>
     <tr>
@@ -18,18 +32,5 @@
       <td><%= book.body %></td>
     </tr>
     <% end %>
-    <% unless @user.id == current_user.id %>
-     <% if(current_user.following? @user) && (@user.following? current_user) %>
-     <% if @isRoom == true %>
-      <p class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-primary btn-lg">チャットへ</a></p>
-     <% else %>
-      <%= form_for @room do |f| %>
-       <%= e.hidden_field :user_id, value: @user.id %>
-      <% end %>
-      <%= f.submit "チャットを始める", class:"btn btn-primary btn-lg user-show-chat" %>
-     <% end %>
-    <% end %>
-    <% end %>
-   <% end %>
-  </tbody>
+   </tbody>
 </table>
