--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,6 +16,7 @@
        <td><%= image_tag 'no_image.jpg' %></td><!--画像クリックしてuserのshowページに飛ぶ-->
        <td><%= link_to book.title, book_path(book.id) %></td>
        <td><%= book.body %></td>
+       <td>閲覧数: <%= book.read_counts.count %></td>
        <td id="favorite_btn_<%= book.id %>">
         <%= render "favorites/btn", book: book %>
        </td>
