投稿数表示

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,5 +32,6 @@
       <td><%= book.body %></td>
     </tr>
     <% end %>
+    <%= current_user.books.where('created_at > ?', Date.today).count %>
    </tbody>
 </table>
