--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,6 +32,7 @@
       <td><%= book.body %></td>
     </tr>
     <% end %>
-    <%= current_user.books.where('created_at > ?', Date.today).count %>
    </tbody>
 </table>
+<h2>今日の投稿数</h2>
+<%= current_user.books.where('created_at > ?', Date.today).count %>
