--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,5 +34,16 @@
     <% end %>
    </tbody>
 </table>
-<h2>今日の投稿数</h2>
-<%= current_user.books.where('created_at > ?', Date.today).count %>
+
+<h3>投稿数の前日比・前週比</h3>
+ <div class="table_width">
+   <table class="table table-bordered">
+     <thead>
+       <tr>
+         <th>今日の投稿</th>
+         <th>昨日の投稿</th>
+         <th>前日比</th>
+       </tr>
+     </thead>
+   </table>
+ </div>
