--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,5 +45,17 @@
          <th>前日比</th>
        </tr>
      </thead>
+     <tbody>
+       <tr>
+         <td><%= @today_book.count %></td>
+         <td><%= @yesterday_book.count %></td>
+        <% if @yesterday_book.count == 0 %>
+         <td>前日の投稿は無し</td>
+        <% else %>
+         <td><% @the_day_before = @today_book.count / @yesterday_book.count %>
+         <%=(@the_day_before * 100).round %>%</td>
+        <% end %>
+       </tr>
+     </tbody>
    </table>
  </div>
