--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -58,4 +58,26 @@
        </tr>
      </tbody>
    </table>
+
+   <table class="table table-bordered">
+       <thead>
+           <tr>
+               <th>今週の投稿</th>
+               <th>先週の投稿</th>
+               <th>先週比</th>
+           </tr>
+       </thead>
+       <tbody>
+           <tr>
+               <td><%= @this_week_book.count %></td>
+               <td><%= @last_week_book.count %></td>
+              <% if @last_week_book.count == 0 %>
+              <td>先週の投稿は無し</td>
+             <% else %>
+              <td><% @the_week_before = @this_week_book.count / @last_week_book.count %>
+              <%= (@the_week_before * 100).round %>%</td>
+             <% end %>
+           </tr>
+       </tbody>
+   </table>
  </div>
